# localassistant

./: .gitignore  .gitmodules  GEMINI.md  LICENSE  README.md  TODO.md  build.gradle.kts  settings.gradle.kts
agent_documentation/: ARCHITECTURE.md  CHANGELOG.md  GEMINI.md  KNOWN_ISSUES.md  PROJECT_PLAN.md  ROADMAP.md  TODO.md  improved_known_issues.md  improved_project_plan.md  improved_roadmap.md  new_testing_doc.md  project_plan.md
agent_documentation/deep_dives/: LLAMA_CPP.md
app/: build.gradle.kts
app/libs/: onnxruntime-genai-android-0.7.0.aar  onnxruntime-genai-android-0.8.3.aar
app/src/androidTest/java/com/example/localassistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama.cpp_wrapper.cpp
app/src/main/java/com/example/localassistant/: CameraActivity.kt  MainActivity.kt
app/src/main/java/com/example/localassistant/model/: Message.kt
app/src/main/java/com/localassistant/: LocalAssistantApp.kt  MainActivity.kt
app/src/main/java/com/localassistant/data/: DownloadProgress.kt  LlamaModelRepository.kt  ModelDownloader.kt  ModelRepository.kt  Phi4MiniFiles.kt  Phi4ModelRepository.kt  RemoteModelDataSource.kt  SettingsRepository.kt  SettingsRepositoryImpl.kt
app/src/main/java/com/localassistant/di/: AppModule.kt  InferenceModule.kt
app/src/main/java/com/localassistant/engine/: Engine.kt  InferenceEngine.kt
app/src/main/java/com/localassistant/inference/: LlamaCppInferenceEngine.kt  OnnxInferenceEngine.kt  Phi4OnnxInference.kt
app/src/main/java/com/localassistant/model/: Message.kt
app/src/main/java/com/localassistant/viewmodel/: ChatViewModel.kt  DownloadViewModel.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama-binding/: build.gradle.kts
llama-binding/src/main/cpp/: CMakeLists.txt  llamacpp_bridge.cpp
(+29 files in other folders)
